Fix zindex issue w/ footer (invisibly, mostly) covering chat button

--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -57,7 +57,7 @@ body {
     margin-bottom: 60px;
 }
 
-aside {
+.gitter-chat-embed, .gitter-open-chat-button {
     /* This is used for the gitter chat box */
     z-index: 1500 !important;
 }
